[tool.poetry]
name = "blocking-asyncio"
version = "0.1.0"
description = ""
authors = ["Soof Golan <hi@soofgolan.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
